alpm-db/tests/parse_errors/desc/snapshots/empty.snap
---
source: alpm-db/tests/parse_errors.rs
description: ""
expression: error
---
Missing section: %NAME%
