alpm-db/tests/parse_errors/desc/snapshots/invalid_keyword.snap
---
source: alpm-db/tests/parse_errors.rs
description: "%name%\nfoo\n\n%VERSION%\n1.0.0-1\n"
expression: error
---
Parser failed with the following error:
parse error at line 1, column 1
  |
1 | %name%
  | ^
invalid section name
expected a section name that is enclosed in `%` characters, `NAME`, `VERSION`, `BASE`, `DESC`, `URL`, `ARCH`, `BUILDDATE`, `INSTALLDATE`, `PACKAGER`, `SIZE`, `GROUPS`, `REASON`, `LICENSE`, `VALIDATION`, `REPLACES`, `DEPENDS`, `OPTDEPENDS`, `CONFLICTS`, `PROVIDES`, `XDATA`, a section in the database desc file
Matching variant not found
